@@ -1,5 +1,4 @@
 <?php
-
 function build_popup_url($url, $url_is_complete=0) {
 
 	/* Separate the target from the arguments */
@@ -24,6 +23,10 @@ function build_popup_url($url, $url_is_complete=0) {
 }
 
 function popup($url, $url_is_complete=0, $height=500,$width=500) {
+	// Force int data type
+	$height = (int)$height;
+	$width = (int)$width;
+
 	$url = build_popup_url($url, $url_is_complete);
 	return popup_js($url, "Edit","height=$height,width=$width,location=no,scrollbars=yes,menubars=no,toolbars=no,resizable=yes");
 }
@@ -38,6 +41,10 @@ function popup_js($url, $window, $attrs) {
 }
 
 function popup_status($url, $height=150, $width=350) {
+	// Force int data type
+	$height = (int)$height;
+	$width = (int)$width;
+
 	$attrs = "height=$height,width=$width,location=no,scrollbars=no,menubars=no,toolbars=no,resizable=yes";
 	return "open('" . unhtmlentities(makeGalleryUrl($url)) . "','Status','$attrs');";
 }
@@ -45,6 +52,10 @@ function popup_status($url, $height=150, $width=350) {
 function popup_link($title, $url, $url_is_complete=0, $online_only=true, $height=500,$width=500, $cssclass='', $extraJS='') {
 	static $popup_counter = 0;
 	global $gallery;
+
+	// Force int data type
+	$height = (int)$height;
+	$width = (int)$width;
 
 	if ( !empty($gallery->session->offline) && $online_only ) {
 		return null;
