@@ -1,3 +1,7 @@
+2005-07-12  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b59
+
+	* Fix: Prevent non-integer data from being passed into get*Tag functions
+
 2005-07-12  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b58
 
 	* Change: Create a new session after destroying the old on logout, 
